data/derived/sp14/progs/unify/prog2992.ml.out
Characters 150-154:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list * int
       but an expression was expected of type int
